feat: updated gitignore for dsstore; added workflow files; added deploy actions

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 *.scss.map
 node_modules
 .DS_Store
+
+
+# ignore all DS_Store files in any directory (this is a system file created by the macOS operating system)
+**/.DS_Store
